--- a/CalExtension.csproj
+++ b/CalExtension.csproj
@@ -40,13 +40,13 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="MulLib">
-      <HintPath>..\..\..\..\Publ\Phoenix_Muj_.NET3.5_dll\MulLib.dll</HintPath>
+      <HintPath>..\..\pheonix-masterNet3.5\src\Phoenix\bin\Debug\MulLib.dll</HintPath>
     </Reference>
     <Reference Include="Phoenix">
-      <HintPath>..\..\..\..\Publ\Phoenix_Muj_.NET3.5_dll\Phoenix.dll</HintPath>
+      <HintPath>..\..\pheonix-masterNet3.5\src\Phoenix\bin\Debug\Phoenix.dll</HintPath>
     </Reference>
     <Reference Include="PhoenixShared">
-      <HintPath>..\..\..\..\Publ\Phoenix_Muj_.NET3.5_dll\PhoenixShared.dll</HintPath>
+      <HintPath>..\..\pheonix-masterNet3.5\src\Phoenix\bin\Debug\PhoenixShared.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -59,7 +59,7 @@
     <Reference Include="System.Xml" />
     <Reference Include="UOEncryption.NET, Version=1.0.0.0, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\Publ\Phoenix_Muj_.NET3.5\UOEncryption.NET.dll</HintPath>
+      <HintPath>..\..\pheonix-masterNet3.5\src\Phoenix\bin\Debug\UOEncryption.NET.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
